# project

./: .gitignore  pyproject.toml  test.txt
data/: path.py  test_csv.csv  test_rub.json  test_unjson.json  test_usd.json
src/: decorators.py  generators.py  masks.py  mylog.txt  operations.py  processing.py  transactions.py  utils.py  widget.py
src.2/: main.py  masks.py  widget.py
tests2/: test_decorator.py  test_generators.py  test_masks.py  test_processing.py  test_transaction.py  test_utils.py  test_widget.py
